# ai-agent-platform

./: .ansible-lint  .gitignore  .markdownlint.yml  .mypy.ini  README.md  pattern-metadata.yaml  values-addon.yaml  values-global.yaml  values-hub.yaml  values-secret.yaml.template  values-standalone.yaml
.github/workflows/: jsonschema.yaml  sync-rhdp-branch.yml
ansible/: site.yaml
ansible/playbooks/: create-gpu-machineset-azure.yaml  create-gpu-machineset.yaml
ansible/playbooks/templates/: gpu-machineset.j2
charts/all/agent-chat-ui/: Chart.yaml  values.yaml
charts/all/agent-monitoring-config/: Chart.yaml  values.yaml
charts/all/agent-ui-config/: Chart.yaml  values.yaml
charts/all/bee-agent-service/: Chart.yaml  values.yaml
charts/all/pgvector/: values.yaml
charts/all/sample-api/: Chart.yaml  values.yaml
charts/all/vllm-inference-service/: values.yaml
containers/agent-chat-ui/: Dockerfile  requirements.txt
containers/bee-agent-service/: Dockerfile  pyproject.toml
containers/bee-agent-service/app/: agent_loader.py  config.py  main.py  metrics.py
containers/bee-agent-service/app/agents/: api_explorer.py  cluster_health.py
containers/bee-agent-service/app/tools/: kubernetes.py
containers/sample-api/: Dockerfile
docs/: _index.md  addon-deployment.md  cluster-sizing.md  getting-started.md  ideas-for-customization.md  troubleshooting.md
overrides/: values-Azure.yaml
tests/interop/: test_subscription_status_hub.py  test_validate_agent_services.py  test_validate_gpu_nodes.py  test_validate_hub_site_components.py
(+21 files in other folders)
